# minimizer_counting_function

./: .gitignore  README.md  lib.py  script.py  utils.py
Data/: minimizers_results_rna_fusion.csv
Python/: lib.py  script.py
Rust/: .gitignore  Cargo.toml  README.md
Rust/benchmark_runs/all_png/: benchmark_times.tsv
Rust/src/: dna.rs  lib.rs  main.rs  vigemin.rs
rust_script/: Cargo.toml
rust_script/src/: lib.rs  main.rs  utils.rs
scripts/: canonical_brute_force.py  cumulative_distribution_partition.py  empirical_vs_theory.py  exp_regression.py  exp_regression_enumeration.py  figure_enumeration.py  figure_normalized.py  pikmin_benchmark.py  theory_enumeration.py  theory_sample.py  theory_unique.py  to_be_refactored.py  vigemers_approximation.py  vigemers_enumeration.py
src/: canonical_wip.py  lib.py  utils.py
tests/: test_regular_kmers.py  test_vigemers.py
